src/parser/y.output
Nonterminals useless in grammar

    id


Terminals unused in grammar

    T_RETURN
    T_ADD_ASSIGN
    T_SUB_ASSIGN
    T_MUL_ASSIGN
    T_DIV_ASSIGN
    T_MOD_ASSIGN
    T_AND_ASSIGN
    T_XOR_ASSIGN
    T_OR_ASSIGN
    T_RIGHT_OP
    T_LEFT_OP
    T_INC_OP
    T_DEC_OP
    T_PTR_OP
    T_AND
    T_OR
    T_AVG
    T_ELEMENTS
    '?'
    '%'


Grammar

    0 $accept: program $end

    1 program: function_def

    2 function_def: function_data function_body

    3 function_data: T_FUNC ID '(' paramList ')'

    4 paramList: param
    5          | paramList ',' param

    6 param: type1 ID
    7      | type2 ID
    8      | type2 ID '(' ID ')'

    9 function_body: blockstatements

   10 statements: %empty
   11           | statements statement

   12 statement: declaration ';'
   13          | assignment ';'
   14          | proc_call ';'
   15          | control_flow
   16          | reduction ';'
   17          | bfs_abstraction
   18          | blockstatements

   19 blockstatements: block_begin statements block_end

   20 block_begin: '{'

   21 block_end: '}'

   22 declaration: type1 ID
   23            | type1 ID '=' rhs
   24            | type2 ID
   25            | type2 ID '=' rhs

   26 type1: primitive
   27      | graph
   28      | collections

   29 primitive: T_INT
   30          | T_FLOAT
   31          | T_BOOL
   32          | T_DOUBLE
   33          | T_LONG

   34 graph: T_GRAPH
   35      | T_DIR_GRAPH

   36 collections: T_LIST
   37            | T_SET_NODES '<' ID '>'
   38            | T_SET_EDGES '<' ID '>'

   39 type2: T_NODE
   40      | T_EDGE
   41      | property

   42 property: T_NP '<' primitive '>'
   43         | T_EP '<' primitive '>'
   44         | T_NP '<' collections '>'
   45         | T_EP '<' collections '>'

   46 assignment: leftSide '=' rhs

   47 rhs: expression

   48 expression: proc_call
   49           | expression '+' expression
   50           | expression '-' expression
   51           | expression '*' expression
   52           | expression '/' expression
   53           | expression T_AND_OP expression
   54           | expression T_OR_OP expression
   55           | expression T_LE_OP expression
   56           | expression T_GE_OP expression
   57           | expression '<' expression
   58           | expression '>' expression
   59           | expression T_EQ_OP expression
   60           | expression T_NE_OP expression
   61           | '(' expression ')'
   62           | val
   63           | leftSide

   64 proc_call: leftSide '(' arg_list ')'

   65 val: INT_NUM
   66    | FLOAT_NUM
   67    | BOOL_VAL
   68    | T_INF
   69    | T_P_INF
   70    | T_N_INF

   71 control_flow: selection_cf
   72             | iteration_cf

   73 iteration_cf: T_FIXEDPOINT T_UNTIL '(' boolean_expr ')' blockstatements
   74             | T_WHILE '(' boolean_expr ')' blockstatements
   75             | T_DO blockstatements T_WHILE '(' boolean_expr ')'
   76             | T_FORALL '(' ID T_IN ID '.' proc_call filterExpr ')' blockstatements
   77             | T_FOR '(' ID T_IN leftSide ')' blockstatements
   78             | T_FOR '(' ID T_IN ID '.' proc_call filterExpr ')' blockstatements

   79 filterExpr: %empty
   80           | '.' T_FILTER '(' boolean_expr ')'

   81 boolean_expr: expression

   82 selection_cf: T_IF '(' boolean_expr ')' blockstatements
   83             | T_IF '(' boolean_expr ')' blockstatements T_ELSE blockstatements

   84 reduction: leftSide '=' reductionCall
   85          | '<' leftList '>' '=' '<' rightList '>'

   86 leftList: leftList ',' leftSide
   87         | leftSide

   88 rightList: reductionCall ',' val
   89          | reductionCall

   90 reductionCall: reduction_op '(' arg_list ')'

   91 reduction_op: T_SUM
   92             | T_COUNT
   93             | T_PRODUCT
   94             | T_MAX
   95             | T_MIN

   96 leftSide: ID
   97         | oid

   98 arg_list: arg_list ',' assignment
   99         | arg_list ',' expression
  100         | expression
  101         | assignment

  102 bfs_abstraction: T_BFS '(' ID ':' T_FROM ID ')' filterExpr blockstatements reverse_abstraction

  103 reverse_abstraction: T_REVERSE '(' boolean_expr ')' filterExpr blockstatements

  104 oid: ID '.' ID


Terminals, with rules where they appear

    $end (0) 0
    '%' (37)
    '(' (40) 3 8 61 64 73 74 75 76 77 78 80 82 83 90 102 103
    ')' (41) 3 8 61 64 73 74 75 76 77 78 80 82 83 90 102 103
    '*' (42) 51
    '+' (43) 49
    ',' (44) 5 86 88 98 99
    '-' (45) 50
    '.' (46) 76 78 80 104
    '/' (47) 52
    ':' (58) 102
    ';' (59) 12 13 14 16
    '<' (60) 37 38 42 43 44 45 57 85
    '=' (61) 23 25 46 84 85
    '>' (62) 37 38 42 43 44 45 58 85
    '?' (63)
    '{' (123) 20
    '}' (125) 21
    error (256)
    T_INT (258) 29
    T_FLOAT (259) 30
    T_BOOL (260) 31
    T_DOUBLE (261) 32
    T_LONG (262) 33
    T_FORALL (263) 76
    T_FOR (264) 77 78
    T_P_INF (265) 69
    T_INF (266) 68
    T_N_INF (267) 70
    T_FUNC (268) 3
    T_IF (269) 82 83
    T_ELSE (270) 83
    T_WHILE (271) 74 75
    T_RETURN (272)
    T_DO (273) 75
    T_IN (274) 76 77 78
    T_FIXEDPOINT (275) 73
    T_UNTIL (276) 73
    T_FILTER (277) 80
    T_ADD_ASSIGN (278)
    T_SUB_ASSIGN (279)
    T_MUL_ASSIGN (280)
    T_DIV_ASSIGN (281)
    T_MOD_ASSIGN (282)
    T_AND_ASSIGN (283)
    T_XOR_ASSIGN (284)
    T_OR_ASSIGN (285)
    T_RIGHT_OP (286)
    T_LEFT_OP (287)
    T_INC_OP (288)
    T_DEC_OP (289)
    T_PTR_OP (290)
    T_AND_OP (291) 53
    T_OR_OP (292) 54
    T_LE_OP (293) 55
    T_GE_OP (294) 56
    T_EQ_OP (295) 59
    T_NE_OP (296) 60
    T_AND (297)
    T_OR (298)
    T_SUM (299) 91
    T_AVG (300)
    T_COUNT (301) 92
    T_PRODUCT (302) 93
    T_MAX (303) 94
    T_MIN (304) 95
    T_GRAPH (305) 34
    T_DIR_GRAPH (306) 35
    T_NODE (307) 39
    T_EDGE (308) 40
    T_NP (309) 42 44
    T_EP (310) 43 45
    T_LIST (311) 36
    T_SET_NODES (312) 37
    T_SET_EDGES (313) 38
    T_ELEMENTS (314)
    T_FROM (315) 102
    T_BFS (316) 102
    T_REVERSE (317) 103
    ID <text> (318) 3 6 7 8 22 23 24 25 37 38 76 77 78 96 102 104
    INT_NUM <ival> (319) 65
    FLOAT_NUM <fval> (320) 66
    BOOL_VAL <bval> (321) 67


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    program (85)
        on left: 1
        on right: 0
    function_def <node> (86)
        on left: 2
        on right: 1
    function_data <node> (87)
        on left: 3
        on right: 2
    paramList <pList> (88)
        on left: 4 5
        on right: 3 5
    param <node> (89)
        on left: 6 7 8
        on right: 4 5
    function_body <node> (90)
        on left: 9
        on right: 2
    statements (91)
        on left: 10 11
        on right: 11 19
    statement <node> (92)
        on left: 12 13 14 15 16 17 18
        on right: 11
    blockstatements <node> (93)
        on left: 19
        on right: 9 18 73 74 75 76 77 78 82 83 102 103
    block_begin (94)
        on left: 20
        on right: 19
    block_end (95)
        on left: 21
        on right: 19
    declaration <node> (96)
        on left: 22 23 24 25
        on right: 12
    type1 <node> (97)
        on left: 26 27 28
        on right: 6 22 23
    primitive <node> (98)
        on left: 29 30 31 32 33
        on right: 26 42 43
    graph <node> (99)
        on left: 34 35
        on right: 27
    collections <node> (100)
        on left: 36 37 38
        on right: 28 44 45
    type2 <node> (101)
        on left: 39 40 41
        on right: 7 8 24 25
    property <node> (102)
        on left: 42 43 44 45
        on right: 41
    assignment <node> (103)
        on left: 46
        on right: 13 98 101
    rhs <node> (104)
        on left: 47
        on right: 23 25 46
    expression <node> (105)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 47 49 50 51 52 53 54 55 56 57 58 59 60 61 81 99 100
    proc_call <node> (106)
        on left: 64
        on right: 14 48 76 78
    val <node> (107)
        on left: 65 66 67 68 69 70
        on right: 62 88
    control_flow <node> (108)
        on left: 71 72
        on right: 15
    iteration_cf <node> (109)
        on left: 73 74 75 76 77 78
        on right: 72
    filterExpr <node> (110)
        on left: 79 80
        on right: 76 78 102 103
    boolean_expr <node> (111)
        on left: 81
        on right: 73 74 75 80 82 83 103
    selection_cf <node> (112)
        on left: 82 83
        on right: 71
    reduction <node> (113)
        on left: 84 85
        on right: 16
    leftList <nodeList> (114)
        on left: 86 87
        on right: 85 86
    rightList <temporary> (115)
        on left: 88 89
        on right: 85
    reductionCall <node> (116)
        on left: 90
        on right: 84 88 89
    reduction_op <ival> (117)
        on left: 91 92 93 94 95
        on right: 90
    leftSide <node> (118)
        on left: 96 97
        on right: 46 63 64 77 84 86 87
    arg_list <aList> (119)
        on left: 98 99 100 101
        on right: 64 90 98 99
    bfs_abstraction <node> (120)
        on left: 102
        on right: 17
    reverse_abstraction <node> (121)
        on left: 103
        on right: 102
    oid <node> (122)
        on left: 104
        on right: 97


State 0

    0 $accept: . program $end

    T_FUNC  shift, and go to state 1

    program        go to state 2
    function_def   go to state 3
    function_data  go to state 4


State 1

    3 function_data: T_FUNC . ID '(' paramList ')'

    ID  shift, and go to state 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: function_def .

    $default  reduce using rule 1 (program)


State 4

    2 function_def: function_data . function_body

    '{'  shift, and go to state 7

    function_body    go to state 8
    blockstatements  go to state 9
    block_begin      go to state 10


State 5

    3 function_data: T_FUNC ID . '(' paramList ')'

    '('  shift, and go to state 11


State 6

    0 $accept: program $end .

    $default  accept


State 7

   20 block_begin: '{' .

    $default  reduce using rule 20 (block_begin)


State 8

    2 function_def: function_data function_body .

    $default  reduce using rule 2 (function_def)


State 9

    9 function_body: blockstatements .

    $default  reduce using rule 9 (function_body)


State 10

   19 blockstatements: block_begin . statements block_end

    $default  reduce using rule 10 (statements)

    statements  go to state 12


State 11

    3 function_data: T_FUNC ID '(' . paramList ')'

    T_INT        shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_BOOL       shift, and go to state 15
    T_DOUBLE     shift, and go to state 16
    T_LONG       shift, and go to state 17
    T_GRAPH      shift, and go to state 18
    T_DIR_GRAPH  shift, and go to state 19
    T_NODE       shift, and go to state 20
    T_EDGE       shift, and go to state 21
    T_NP         shift, and go to state 22
    T_EP         shift, and go to state 23
    T_LIST       shift, and go to state 24
    T_SET_NODES  shift, and go to state 25
    T_SET_EDGES  shift, and go to state 26

    paramList    go to state 27
    param        go to state 28
    type1        go to state 29
    primitive    go to state 30
    graph        go to state 31
    collections  go to state 32
    type2        go to state 33
    property     go to state 34


State 12

   11 statements: statements . statement
   19 blockstatements: block_begin statements . block_end

    T_INT         shift, and go to state 13
    T_FLOAT       shift, and go to state 14
    T_BOOL        shift, and go to state 15
    T_DOUBLE      shift, and go to state 16
    T_LONG        shift, and go to state 17
    T_FORALL      shift, and go to state 35
    T_FOR         shift, and go to state 36
    T_IF          shift, and go to state 37
    T_WHILE       shift, and go to state 38
    T_DO          shift, and go to state 39
    T_FIXEDPOINT  shift, and go to state 40
    T_GRAPH       shift, and go to state 18
    T_DIR_GRAPH   shift, and go to state 19
    T_NODE        shift, and go to state 20
    T_EDGE        shift, and go to state 21
    T_NP          shift, and go to state 22
    T_EP          shift, and go to state 23
    T_LIST        shift, and go to state 24
    T_SET_NODES   shift, and go to state 25
    T_SET_EDGES   shift, and go to state 26
    T_BFS         shift, and go to state 41
    ID            shift, and go to state 42
    '<'           shift, and go to state 43
    '{'           shift, and go to state 7
    '}'           shift, and go to state 44

    statement        go to state 45
    blockstatements  go to state 46
    block_begin      go to state 10
    block_end        go to state 47
    declaration      go to state 48
    type1            go to state 49
    primitive        go to state 30
    graph            go to state 31
    collections      go to state 32
    type2            go to state 50
    property         go to state 34
    assignment       go to state 51
    proc_call        go to state 52
    control_flow     go to state 53
    iteration_cf     go to state 54
    selection_cf     go to state 55
    reduction        go to state 56
    leftSide         go to state 57
    bfs_abstraction  go to state 58
    oid              go to state 59


State 13

   29 primitive: T_INT .

    $default  reduce using rule 29 (primitive)


State 14

   30 primitive: T_FLOAT .

    $default  reduce using rule 30 (primitive)


State 15

   31 primitive: T_BOOL .

    $default  reduce using rule 31 (primitive)


State 16

   32 primitive: T_DOUBLE .

    $default  reduce using rule 32 (primitive)


State 17

   33 primitive: T_LONG .

    $default  reduce using rule 33 (primitive)


State 18

   34 graph: T_GRAPH .

    $default  reduce using rule 34 (graph)


State 19

   35 graph: T_DIR_GRAPH .

    $default  reduce using rule 35 (graph)


State 20

   39 type2: T_NODE .

    $default  reduce using rule 39 (type2)


State 21

   40 type2: T_EDGE .

    $default  reduce using rule 40 (type2)


State 22

   42 property: T_NP . '<' primitive '>'
   44         | T_NP . '<' collections '>'

    '<'  shift, and go to state 60


State 23

   43 property: T_EP . '<' primitive '>'
   45         | T_EP . '<' collections '>'

    '<'  shift, and go to state 61


State 24

   36 collections: T_LIST .

    $default  reduce using rule 36 (collections)


State 25

   37 collections: T_SET_NODES . '<' ID '>'

    '<'  shift, and go to state 62


State 26

   38 collections: T_SET_EDGES . '<' ID '>'

    '<'  shift, and go to state 63


State 27

    3 function_data: T_FUNC ID '(' paramList . ')'
    5 paramList: paramList . ',' param

    ')'  shift, and go to state 64
    ','  shift, and go to state 65


State 28

    4 paramList: param .

    $default  reduce using rule 4 (paramList)


State 29

    6 param: type1 . ID

    ID  shift, and go to state 66


State 30

   26 type1: primitive .

    $default  reduce using rule 26 (type1)


State 31

   27 type1: graph .

    $default  reduce using rule 27 (type1)


State 32

   28 type1: collections .

    $default  reduce using rule 28 (type1)


State 33

    7 param: type2 . ID
    8      | type2 . ID '(' ID ')'

    ID  shift, and go to state 67


State 34

   41 type2: property .

    $default  reduce using rule 41 (type2)


State 35

   76 iteration_cf: T_FORALL . '(' ID T_IN ID '.' proc_call filterExpr ')' blockstatements

    '('  shift, and go to state 68


State 36

   77 iteration_cf: T_FOR . '(' ID T_IN leftSide ')' blockstatements
   78             | T_FOR . '(' ID T_IN ID '.' proc_call filterExpr ')' blockstatements

    '('  shift, and go to state 69


State 37

   82 selection_cf: T_IF . '(' boolean_expr ')' blockstatements
   83             | T_IF . '(' boolean_expr ')' blockstatements T_ELSE blockstatements

    '('  shift, and go to state 70


State 38

   74 iteration_cf: T_WHILE . '(' boolean_expr ')' blockstatements

    '('  shift, and go to state 71


State 39

   75 iteration_cf: T_DO . blockstatements T_WHILE '(' boolean_expr ')'

    '{'  shift, and go to state 7

    blockstatements  go to state 72
    block_begin      go to state 10


State 40

   73 iteration_cf: T_FIXEDPOINT . T_UNTIL '(' boolean_expr ')' blockstatements

    T_UNTIL  shift, and go to state 73


State 41

  102 bfs_abstraction: T_BFS . '(' ID ':' T_FROM ID ')' filterExpr blockstatements reverse_abstraction

    '('  shift, and go to state 74


State 42

   96 leftSide: ID .
  104 oid: ID . '.' ID

    '.'  shift, and go to state 75

    $default  reduce using rule 96 (leftSide)


State 43

   85 reduction: '<' . leftList '>' '=' '<' rightList '>'

    ID  shift, and go to state 42

    leftList  go to state 76
    leftSide  go to state 77
    oid       go to state 59


State 44

   21 block_end: '}' .

    $default  reduce using rule 21 (block_end)


State 45

   11 statements: statements statement .

    $default  reduce using rule 11 (statements)


State 46

   18 statement: blockstatements .

    $default  reduce using rule 18 (statement)


State 47

   19 blockstatements: block_begin statements block_end .

    $default  reduce using rule 19 (blockstatements)


State 48

   12 statement: declaration . ';'

    ';'  shift, and go to state 78


State 49

   22 declaration: type1 . ID
   23            | type1 . ID '=' rhs

    ID  shift, and go to state 79


State 50

   24 declaration: type2 . ID
   25            | type2 . ID '=' rhs

    ID  shift, and go to state 80


State 51

   13 statement: assignment . ';'

    ';'  shift, and go to state 81


State 52

   14 statement: proc_call . ';'

    ';'  shift, and go to state 82


State 53

   15 statement: control_flow .

    $default  reduce using rule 15 (statement)


State 54

   72 control_flow: iteration_cf .

    $default  reduce using rule 72 (control_flow)


State 55

   71 control_flow: selection_cf .

    $default  reduce using rule 71 (control_flow)


State 56

   16 statement: reduction . ';'

    ';'  shift, and go to state 83


State 57

   46 assignment: leftSide . '=' rhs
   64 proc_call: leftSide . '(' arg_list ')'
   84 reduction: leftSide . '=' reductionCall

    '('  shift, and go to state 84
    '='  shift, and go to state 85


State 58

   17 statement: bfs_abstraction .

    $default  reduce using rule 17 (statement)


State 59

   97 leftSide: oid .

    $default  reduce using rule 97 (leftSide)


State 60

   42 property: T_NP '<' . primitive '>'
   44         | T_NP '<' . collections '>'

    T_INT        shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_BOOL       shift, and go to state 15
    T_DOUBLE     shift, and go to state 16
    T_LONG       shift, and go to state 17
    T_LIST       shift, and go to state 24
    T_SET_NODES  shift, and go to state 25
    T_SET_EDGES  shift, and go to state 26

    primitive    go to state 86
    collections  go to state 87


State 61

   43 property: T_EP '<' . primitive '>'
   45         | T_EP '<' . collections '>'

    T_INT        shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_BOOL       shift, and go to state 15
    T_DOUBLE     shift, and go to state 16
    T_LONG       shift, and go to state 17
    T_LIST       shift, and go to state 24
    T_SET_NODES  shift, and go to state 25
    T_SET_EDGES  shift, and go to state 26

    primitive    go to state 88
    collections  go to state 89


State 62

   37 collections: T_SET_NODES '<' . ID '>'

    ID  shift, and go to state 90


State 63

   38 collections: T_SET_EDGES '<' . ID '>'

    ID  shift, and go to state 91


State 64

    3 function_data: T_FUNC ID '(' paramList ')' .

    $default  reduce using rule 3 (function_data)


State 65

    5 paramList: paramList ',' . param

    T_INT        shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_BOOL       shift, and go to state 15
    T_DOUBLE     shift, and go to state 16
    T_LONG       shift, and go to state 17
    T_GRAPH      shift, and go to state 18
    T_DIR_GRAPH  shift, and go to state 19
    T_NODE       shift, and go to state 20
    T_EDGE       shift, and go to state 21
    T_NP         shift, and go to state 22
    T_EP         shift, and go to state 23
    T_LIST       shift, and go to state 24
    T_SET_NODES  shift, and go to state 25
    T_SET_EDGES  shift, and go to state 26

    param        go to state 92
    type1        go to state 29
    primitive    go to state 30
    graph        go to state 31
    collections  go to state 32
    type2        go to state 33
    property     go to state 34


State 66

    6 param: type1 ID .

    $default  reduce using rule 6 (param)


State 67

    7 param: type2 ID .
    8      | type2 ID . '(' ID ')'

    '('  shift, and go to state 93

    $default  reduce using rule 7 (param)


State 68

   76 iteration_cf: T_FORALL '(' . ID T_IN ID '.' proc_call filterExpr ')' blockstatements

    ID  shift, and go to state 94


State 69

   77 iteration_cf: T_FOR '(' . ID T_IN leftSide ')' blockstatements
   78             | T_FOR '(' . ID T_IN ID '.' proc_call filterExpr ')' blockstatements

    ID  shift, and go to state 95


State 70

   82 selection_cf: T_IF '(' . boolean_expr ')' blockstatements
   83             | T_IF '(' . boolean_expr ')' blockstatements T_ELSE blockstatements

    T_P_INF    shift, and go to state 96
    T_INF      shift, and go to state 97
    T_N_INF    shift, and go to state 98
    ID         shift, and go to state 42
    INT_NUM    shift, and go to state 99
    FLOAT_NUM  shift, and go to state 100
    BOOL_VAL   shift, and go to state 101
    '('        shift, and go to state 102

    expression    go to state 103
    proc_call     go to state 104
    val           go to state 105
    boolean_expr  go to state 106
    leftSide      go to state 107
    oid           go to state 59


State 71

   74 iteration_cf: T_WHILE '(' . boolean_expr ')' blockstatements

    T_P_INF    shift, and go to state 96
    T_INF      shift, and go to state 97
    T_N_INF    shift, and go to state 98
    ID         shift, and go to state 42
    INT_NUM    shift, and go to state 99
    FLOAT_NUM  shift, and go to state 100
    BOOL_VAL   shift, and go to state 101
    '('        shift, and go to state 102

    expression    go to state 103
    proc_call     go to state 104
    val           go to state 105
    boolean_expr  go to state 108
    leftSide      go to state 107
    oid           go to state 59


State 72

   75 iteration_cf: T_DO blockstatements . T_WHILE '(' boolean_expr ')'

    T_WHILE  shift, and go to state 109


State 73

   73 iteration_cf: T_FIXEDPOINT T_UNTIL . '(' boolean_expr ')' blockstatements

    '('  shift, and go to state 110


State 74
